update interaction of tactical layer

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,18 +61,26 @@
     <Compile Include="Assets\Scripts\CardDisplay.cs" />
     <Compile Include="Assets\Scripts\Controller\UnitElementController.cs" />
     <Compile Include="Assets\Scripts\Controller\CommandElementController.cs" />
+    <Compile Include="Assets\Scripts\Controller\SupplyNodeController.cs" />
     <Compile Include="Assets\Scripts\Prefabs.cs" />
     <Compile Include="Assets\Scripts\Controller\BattleElementController.cs" />
     <Compile Include="Assets\Scripts\SceneManager\StartSceneManager.cs" />
+    <Compile Include="Assets\Scripts\Controller\BattleNodeController.cs" />
     <Compile Include="Assets\Scripts\Controller\NodeController.cs" />
     <Compile Include="Assets\Scripts\SceneManager\CultivateSceneManager.cs" />
+    <Compile Include="Assets\Scripts\Controller\LegacyNodeController.cs" />
     <Compile Include="Assets\Scripts\Controller\DepartmentController.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Controller\SourceNodeController.cs" />
+    <Compile Include="Assets\Scripts\Controller\MedicalNodeController.cs" />
     <Compile Include="Assets\Scripts\SceneManager\BattleSceneManager.cs" />
+    <Compile Include="Assets\Scripts\Controller\PromoteNodeController.cs" />
+    <Compile Include="Assets\Scripts\Controller\TerrainController.cs" />
     <Compile Include="Assets\Scripts\Controller\HandicapController.cs" />
     <Compile Include="Assets\Scripts\SceneManager\TacticalSceneManager.cs" />
     <Compile Include="Assets\Scripts\Controller\CardStackController.cs" />
     <Compile Include="Assets\Scripts\Controller\BattleLineController.cs" />
+    <Compile Include="Assets\Scripts\Controller\OutPostNodeController.cs" />
     <Compile Include="Assets\Scripts\SceneState.cs" />
   </ItemGroup>
   <ItemGroup>
