--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\Scripts\SceneManager\CultivateSceneManager.cs" />
     <Compile Include="Assets\Scripts\Controller\LegacyNodeController.cs" />
     <Compile Include="Assets\CustomRenderPassFeature.cs" />
+    <Compile Include="Assets\Scripts\Controller\BTBattleNode\BTBattleNode1.cs" />
     <Compile Include="Assets\Scripts\Controller\DepartmentController.cs" />
     <Compile Include="Assets\Scripts\ToolKit\CardInspect.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
@@ -91,6 +92,7 @@
     <Compile Include="Assets\Scripts\ToolKit\TargetInspector.cs" />
     <Compile Include="Assets\Scripts\Controller\BTBattleNode\BTBattleNode0.cs" />
     <Compile Include="Assets\Scripts\ToolKit\Button\ButtonAudio.cs" />
+    <Compile Include="Assets\Scripts\Controller\BTBattleNode\BTBattleNode2.cs" />
     <Compile Include="Assets\Scripts\Controller\HandicapController.cs" />
     <Compile Include="Assets\Scripts\SceneManager\TacticalSceneManager.cs" />
     <Compile Include="Assets\Scripts\Controller\CardStackController.cs" />
