--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Assets\Scripts\ToolKit\RewardSelection.cs" />
     <Compile Include="Assets\Scripts\Controller\BTBattleNode\BTBattleNode0.cs" />
     <Compile Include="Assets\Scripts\ToolKit\Button\ButtonAudio.cs" />
+    <Compile Include="Assets\Scripts\Controller\BTBattleNode\BTBattleNode2.cs" />
     <Compile Include="Assets\Scripts\Controller\HandicapController.cs" />
     <Compile Include="Assets\Scripts\SceneManager\TacticalSceneManager.cs" />
     <Compile Include="Assets\Scripts\Controller\CardStackController.cs" />
