--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\ToolKit\TurnMappedDialogger.cs" />
+    <Compile Include="Assets\Scripts\ToolKit\ToolKitPro\PanelController.cs" />
     <Compile Include="Assets\Scripts\Controller\UnitElementController.cs" />
     <Compile Include="Assets\Scripts\ToolKit\TargetSelection.cs" />
     <Compile Include="Assets\Scripts\Controller\CommandElementController.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="Assets\Scripts\Controller\BTBattleNode\BTBattleNode3.cs" />
     <Compile Include="Assets\Scripts\Controller\BattleElementController.cs" />
     <Compile Include="Assets\Scripts\Controller\DeckController.cs" />
+    <Compile Include="Assets\Scripts\ToolKit\MainButton.cs" />
     <Compile Include="Assets\Scripts\ToolKit\InspectPanelController.cs" />
     <Compile Include="Assets\Scripts\ToolKit\HandicapInspector.cs" />
     <Compile Include="Assets\Scripts\ToolKit\NodeInspector.cs" />
@@ -89,7 +91,6 @@
     <Compile Include="Assets\Scripts\SceneManager\BattleSceneManager.cs" />
     <Compile Include="Assets\Scripts\ToolKit\Input\ElementDragInput.cs" />
     <Compile Include="Assets\Scripts\ToolKit\EnergyDisplay.cs" />
-    <Compile Include="Assets\MainButton.cs" />
     <Compile Include="Assets\Scripts\Controller\PromoteNodeController.cs" />
     <Compile Include="Assets\Scripts\Controller\TerrainController.cs" />
     <Compile Include="Assets\Scripts\ToolKit\RewardSelection.cs" />
@@ -100,10 +101,10 @@
     <Compile Include="Assets\Scripts\SceneManager\TacticalSceneManager.cs" />
     <Compile Include="Assets\Scripts\Controller\CardStackController.cs" />
     <Compile Include="Assets\Scripts\ToolKit\TacticalPanelDisplay.cs" />
-    <Compile Include="Assets\PackController.cs" />
     <Compile Include="Assets\Scripts\ToolKit\BaseSelection.cs" />
     <Compile Include="Assets\Scripts\ToolKit\BattleLineDisplay.cs" />
     <Compile Include="Assets\Scripts\Controller\BattleLineController.cs" />
+    <Compile Include="Assets\Scripts\ToolKit\PackController.cs" />
     <Compile Include="Assets\Scripts\Controller\DeckTagController.cs" />
     <Compile Include="Assets\Scripts\Controller\OutPostNodeController.cs" />
     <Compile Include="Assets\Scripts\SceneState.cs" />
